[package]
name = "republic"
version = "0.0.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
description = "An experimental web framework and new idea playground."
categories = ["web-programming::http-server"]
keywords = ["republic", "framework", "web", "server"]
license = "MIT/Apache-2.0"
repository = "https://github.com/getrepublic/republic"
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
hyper = "0.13"
async-trait = "0.1"
route-recognizer = "0.2"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
